# codex-plugins

./: .gitignore  .markdownlint.json  AGENTS.md  ARCHITECTURE_STANDARDS.md  CODING_STANDARDS.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: code-quality.yml
plugins/v8ch/.codex-plugin/: plugin.json
plugins/v8ch/agents/: acceptance-recommender.toml  consensus-review-fixer.toml  consensus-review-poster.toml  opt-in-recommender.toml  review-synthesizer.toml
plugins/v8ch/skills/consensus-review/: SKILL.md  skip-files.md
plugins/v8ch/skills/consensus-review/references/: fix-workflow.md
plugins/v8ch/skills/consensus-review/scripts/: post_review_comment.py  recover_context.py
plugins/v8ch/skills/consensus-review/templates/: acceptance-comment.md.tmpl  additional-acceptance-comment.md.tmpl  fix-validation-comment.md.tmpl  low-confidence-opt-in-comment.md.tmpl  recommendations-comment.md.tmpl  review-comment.md.tmpl
plugins/v8ch/skills/meta-consensus-review-agents/: SKILL.md
plugins/v8ch/skills/recommend/: SKILL.md
plugins/v8ch/skills/remember/: SKILL.md
plugins/v8ch/skills/remember/references/: agents-md-directive.md  journal-format.md  procedural-targets.md  types.md
plugins/v8ch/skills/remember/scripts/: validate_memory.py
tests/: test_codex_marketplace.py  test_post_review_comment.py  test_recover_context.py  test_remember_validate_memory.py
